# ImageRepresentation

./: CMakeLists.txt  README.md  RandomPointsRepresentationColorHistogram.cpp  RandomPointsRepresentationColorHistogram.h  RandomPointsRepresentationMultiDimensionalHistogram.cpp  RandomPointsRepresentationMultiDimensionalHistogram.h  colourHistogram.cpp  colourHistogram.h  imageRepresentation.cpp  imageRepresentation.h  main.cpp
